<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_company_shopee"
            android:icon="@mipmap/icon_news"
            android:title="@string/company_shopee" />
        <item
            android:id="@+id/nav_event"
            android:icon="@mipmap/icon_news"
            android:title="@string/gurukul" />

        <item
            android:id="@+id/nav_bussinessturnover"
            android:icon="@drawable/ic_baseline_addchart_24"
            android:title="@string/bussiness_turnover" />

        <item
            android:id="@+id/nav_start_business"
            android:icon="@mipmap/icon_start_business"
            android:title="@string/start_business" />
        <item
            android:id="@+id/nav_trainning_video"
            android:icon="@drawable/ic_slideshow_black_24dp"
            android:title="@string/trainning_video" />

        <item
            android:id="@+id/nav_sponsor_trainning"
            android:icon="@drawable/ic_slideshow_black_24dp"
            android:title="@string/sponsor_trainning" />
        <item
            android:id="@+id/nav_great_sponsor_trainning"
            android:icon="@drawable/ic_slideshow_black_24dp"
            android:title="@string/great_sponsor_trainning" />
        <item
            android:id="@+id/nav_marketing_material"
            android:icon="@mipmap/icon_marketing_material"
            android:title="@string/marketing_material" />
        <item
            android:id="@+id/nav_success_stories"
            android:icon="@mipmap/icon_success_story"
            android:title="@string/success_stories" />





        <item
            android:id="@+id/nav_my_referal_link"
            android:icon="@mipmap/icon_referal_link"
            android:title="My Referal Links" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_box_golden_24dp"
            android:title="@string/profile" />
<!--        <item-->
<!--            android:id="@+id/nav_goMultiIncome"-->
<!--            android:icon="@mipmap/icon_wallet"-->
<!--            android:title="Get Performance Gift" />-->
        <item
            android:id="@+id/nav_join_telegram"
            android:icon="@mipmap/icon_telegram"
            android:title="@string/join_whatsapp" />
        <item
            android:id="@+id/nav_shapathPatra"
            android:icon="@mipmap/icon_affidavit"
            android:title="@string/shapath_patra" />
        <item
            android:id="@+id/nav_myteam"
            android:icon="@drawable/ic_group_add_golden_24dp"
            android:title="@string/my_downlink" />

        <item
            android:id="@+id/nav_change_sponsor"
            android:icon="@mipmap/icon_change_sponsor"
            android:title="@string/change_sponsor" />

        <item
            android:id="@+id/nav_AboutUs"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/about_us" />



        <item
            android:id="@+id/nav_news"
            android:icon="@mipmap/icon_news"
            android:title="@string/news" />

        <item
            android:id="@+id/nav_support"
            android:icon="@mipmap/icon_support"
            android:title="@string/support" />
        <item
            android:id="@+id/nav_companycaresupport"
            android:icon="@mipmap/icon_support"
            android:title="Company Customer Care" />
        <item
            android:id="@+id/nav_Share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/Share" />
    </group>

    <item
        android:iconTint="@color/colorWhite"
        android:title="Others">
        <menu>
<!--            <item-->
<!--                android:id="@+id/nav_setting"-->
<!--                android:icon="@drawable/ic_menu_manage"-->
<!--                android:title="@string/change_language" />-->
            <item
                android:id="@+id/nav_logout"
                android:icon="@mipmap/icon_logout"
                android:title="@string/log_out" />
        </menu>
    </item>

</menu>
